# BSU

./: .gitignore  ifj]
COMPUTER GRAPHICS PROGRAMMING/Lab1/: package-lock.json  package.json
COMPUTERGRAPHICSPROGRAMMING/Lab1/: documentation.txt
COMPUTERGRAPHICSPROGRAMMING/Lab2/: documentation.txt  documentation_Pythonapp.txt  package-lock.json  package.json
COMPUTERGRAPHICSPROGRAMMING/Lab3/: documentation.txt  solution.py  solution.spec
COMPUTERGRAPHICSPROGRAMMING/Lab4/: documentation.txt  main.py
COMPUTERGRAPHICSPROGRAMMING/Lab5/: app.py  documentation.txt
COMPUTERGRAPHICSPROGRAMMING/Lab6/: app.py  documentation.txt
LABS C++/lab10_list/: list.cpp
LABS C++/lab12/: CMakeLists.txt  Fio.txt  Groups.txt  main.cpp  text.txt  trains.txt
OS/Lectures/FibonacciSequence/: CMakeLists.txt
OS/Lectures/FibonacciSequence/solution/: Tests.cpp  fibonacci.cpp  fibonacci.h  packages.config  solution.cpp  solution.sln  solution.vcxproj  solution.vcxproj.filters
OS/Lectures/FibonacciSequence/solution/solution/x64/Debug/: solution.exe.recipe  vc143.idb
OS/Lectures/FibonacciSequence/solution/solution/x64/Debug/solution.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  solution.lastbuildstate
OS/Lectures/FibonacciSequence/solution/solution/x64/Release/: solution.exe.recipe  solution.ipdb
OS/Lectures/FibonacciSequence/solution/solution/x64/Release/solution.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  solution.lastbuildstate
WEB2SEMESTER/: .gitignore
(+822 files in other folders)
